Fixed visibility button overlays

--- a/assets/css/content/_annotations.scss
+++ b/assets/css/content/_annotations.scss
@@ -170,6 +170,10 @@ $commentSpacer: $spacer;
       right: 0;
       bottom: 0;
       background-color: transparent;
+
+      &.show {
+        display: block;
+      }
     }
 
     .btn {
